@@ -13,7 +13,7 @@
         local_workflows="workspaces_workflows"
         />
   <root name="members"
-        portal_type="Workspace"
+        portal_type="Members Workspace"
         title_msgid="members_root_title"
         rolemap="workspaces_rolemap"
         local_workflows="workspaces_workflows"
