@@ -34,5 +34,6 @@
  <object name="Section" meta_type="CPS Flexible Type Information"/>
  <object name="Topic" meta_type="Factory-based Type Information"/>
  <object name="Workspace" meta_type="CPS Flexible Type Information"/>
+ <object name="Members Workspace" meta_type="CPS Flexible Type Information"/>
  <object name="ZippedHtml" meta_type="CPS Flexible Type Information"/>
 </object>
