@@ -1,0 +1,63 @@
+<?xml version="1.0"?>
+<object name="Workspace" meta_type="CPS Flexible Type Information"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title">portal_type_Members_Workspace_title</property>
+ <property name="description">portal_type_Members_Workspace_description</property>
+ <property name="content_icon">workspace_icon.png</property>
+ <property name="content_meta_type">Folder</property>
+ <property name="product">CPSDefault</property>
+ <property name="factory">addFolder</property>
+ <property name="immediate_view">folder_contents</property>
+ <property name="global_allow">True</property>
+ <property name="filter_content_types">True</property>
+ <property name="allowed_content_types">
+  <element value="Workspace"/>
+ </property>
+ <property name="allow_discussion">False</property>
+ <property name="cps_is_searchable">True</property>
+ <property name="cps_proxy_type">btreefolder</property>
+ <property name="cps_display_as_document_in_listing">False</property>
+ <property name="schemas">
+  <element value="metadata"/>
+  <element value="common"/>
+  <element value="folder"/>
+ </property>
+ <property name="layouts">
+  <element value="common"/>
+  <element value="folder"/>
+ </property>
+ <property name="layout_clusters">
+  <element value="metadata:metadata"/>
+ </property>
+ <property name="flexible_layouts"/>
+ <property name="storage_methods"/>
+ <property name="cps_is_portlet">False</property>
+ <alias from="(Default)" to="folder_contents"/>
+ <alias from="view" to="folder_view"/>
+ <action title="action_new_content" action_id="new_content" category="object"
+    condition_expr="" url_expr="string:${object_url}/folder_factories"
+    visible="True">
+  <permission value="Add portal content"/>
+ </action>
+ <action title="action_import_documents" action_id="import_documents"
+    category="object" condition_expr=""
+    url_expr="string:${object_url}/cpsdocument_import_zip_form"
+    visible="False">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="action_edit" action_id="edit" category="object"
+    condition_expr="" url_expr="string:${object_url}/cpsdocument_edit_form"
+    visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="action_metadata" action_id="metadata" category="object"
+    condition_expr="not:portal/portal_membership/isAnonymousUser"
+    url_expr="string:${object_url}/cpsdocument_metadata" visible="True">
+  <permission value="View"/>
+ </action>
+ <action title="action_local_roles" action_id="localroles" category="object"
+    condition_expr="" url_expr="string:${object_url}/folder_localrole_form"
+    visible="True">
+  <permission value="Change permissions"/>
+ </action>
+</object>
