@@ -15,5 +15,8 @@
   <type type_id="Workspace">
    <bound-workflow workflow_id="workspace_folder_wf"/>
   </type>
+  <type type_id="Members Workspace">
+   <bound-workflow workflow_id="workspace_folder_wf"/>
+  </type>
  </bindings>
 </object>
