@@ -12,3 +12,4 @@ New internal features:
 - moved CPSPortlets to an extension profile and make it mandatory at install 
   time
 - moved CPSSkins to an extension profile and make it mandatory at install time
+- members root folder is now a Members Workspace (CPS Proxy BTree Folder)
